Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22741

Memory leak: CBA is never deleted on Symbian

    XMLWordPrintable

Details

    • fea7c172500811c7ab69f25b8d317890712cf5e8

    Description

      CBA created for each Symbian Qt application is never deleted. This happens because qt_cleanup() calls S60->setButtonGroupContainer(0) before delete S60->buttonGroupContainer(). This can be fixed by calling S60->setButtonGroupContainer(0) only once in qt_cleanup() (after delete S60->buttonGroupContainer()).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            satu.m.makela satu makela
            annaalto Annikka Aalto (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes