Fixing memory leak in QtGui qt_cleanup

In qt_cleanup() the S60->setButtonGroupContainer(0) -
which sets the QS60Data::cba to zero - is called before
calling delete S60->buttonGroupContainer(). Because of
this the currently set QS60Data::cba gets never deleted.

A call S60->setButtonGroupContainer(0) which sets the
QS60Data::cba pointer to zero is now called after calling
the delete S60->buttonGroupContainer().

Task-number: QTBUG-22741
Reviewed-by: Murray Read