src/gui/kernel/qapplication_s60.cpp
@@ -2069,9 +2069,6 @@ extern void qt_cleanup_symbianFontDatabase(); // qfontdatabase_s60.cpp
  *****************************************************************************/
 void qt_cleanup()
 {
-#ifdef Q_WS_S60
-    S60->setButtonGroupContainer(0);
-#endif
     if(qt_S60Beep) {
         delete qt_S60Beep;
         qt_S60Beep = 0;
